--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/> 
   
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/slippry.css"/>
+  <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="slippry.css"/>
 
   <link rel="shortcut icon" href="images/favicon32.png">
   
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/preloader.min.js"></script>
-  <script src="js/modernizr.js"></script> <!-- Modernizr -->
-  <script src="js/slippry.js"></script> <!-- slideshow -->
-  <script src="js/typed.js"></script> <!-- type ani -->
+  <script src="jquery.min.js"></script>
+  <script src="bootstrap.min.js"></script>
+  <script src="preloader.min.js"></script>
+  <script src="modernizr.js"></script> <!-- Modernizr -->
+  <script src="slippry.js"></script> <!-- slideshow -->
+  <script src="typed.js"></script> <!-- type ani -->
   <script src="index.php"></script> <!-- control -->
   <script>
   $(function(){
