--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	      if (target.length) {
 	        $('html,body').animate({
 	          scrollTop: target.offset().top
-	        }, 1000);
+	        }, 100);
 	        return false;
 	      }
 	    }
@@ -81,7 +81,7 @@
 					 transition: 'kenburns',
 					 useCSS: true,
 					 speed: 5000,
-					 pause: 9000,
+					 pause: 90,
 					 auto: true,
 					 controls: false,
 					 preload: 'visible',
@@ -276,8 +276,8 @@
 <div class="col-md-4 pad"><p style="font-size:12px">© 2018-2023 Ramón Tenreiro - All rights reserved</p></div>
 <div class="col-md-4 pad socialbot">
 				<ul>
-                	<li><a href="https://www.linkedin.com/in/rtenreiro/" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="https://www.ramontenreiro.com/img/link..fw.png" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a></li>
-				    <li><a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="https://www.ramontenreiro.com/img/Face.fw.png" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a></li>
+                	<li><a href="https://www.linkedin.com/in/rtenreiro/" style="color:#336666;text-decoration:none;padding:2px 0px"></a></li>
+				    <li><a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;text-decoration:none;padding:2px 0px"></a></li>
                 </ul>
 
 </div>
