--- a/2022RT.html
+++ b/2022RT.html
@@ -8,23 +8,23 @@
   <meta content="" name="Curriculo de Ramón Tenreiro">
 
   <!-- Favicons -->
-  <link href="https://www.ramontenreiro.com/tarquitectura/imagenes/favicon32.png" rel="icon">
+  <link href="favicon32.png" rel="icon">
 
   <!-- Bootstrap CSS File -->
-  <link href="https://www.ramontenreiro.com/p40/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
   
   <script src="cv.php"></script> <!-- control de entradas -->
 
 
   <!-- Libraries CSS Files -->
-  <link href="https://www.ramontenreiro.com/p40/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="https://www.ramontenreiro.com/p40/lib/animate/animate.min.css" rel="stylesheet">
-  <link href="https://www.ramontenreiro.com/p40/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="https://www.ramontenreiro.com/p40/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="https://www.ramontenreiro.com/p40/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+  <link href="font-awesome.min.css" rel="stylesheet">
+  <link href="animate.min.css" rel="stylesheet">
+  <link href="ionicons.min.css" rel="stylesheet">
+  <link href="owl.carousel.min.css" rel="stylesheet">
+  <link href="lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="https://www.ramontenreiro.com/p40/css/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 
   <!-- =======================================================
     Theme Name: DevFolio
@@ -71,7 +71,7 @@
   <!--/ TERMINA MENU/-->
 
   <!--/ EMPIEZA ABOT ME/-->
-  <div id="home" class="intro route bg-image" style="background-image: url(https://www.ramontenreiro.com/img/alcalde.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(alcalde.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -96,7 +96,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="https://www.ramontenreiro.com/img/RT10.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="RT10.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -104,7 +104,7 @@
                       <p><span class="title-s">Nombre: </span> <span>Ramón Tenreiro</span></p>
                       <p><span class="title-s"> </span> <span>Arquitecto - M.B.A. </span></p>
                       <p><span class="title-s">Email: </span> <span>ramon@tenreiros.com</span></p>
-                      <p><span class="title-s">Teléfono: </span> <span>671 617 644</span></p>
+                      <p><span class="title-s">Teléfono: </span> <span>639 47 41 15</span></p>
                     </div>
                   </div>
                 </div>
@@ -179,7 +179,7 @@
   <!--/ FIN ABOUT /-->  
   <!--/ EXPERIENCIA EN COMPETENCIAS /-->
 
-  <div class="section-counter paralax-mf bg-image" style="background-image: url(https://www.ramontenreiro.com/img/edificio1.jpg)">
+  <div class="section-counter paralax-mf bg-image" style="background-image: url(edificio1.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -250,9 +250,9 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://www.ramontenreiro.com/trabajos/CVD.pdf">
+            <a href="CVD.pdf">
               <div class="work-img">
-                <img src="https://www.ramontenreiro.com/trabajos/CVD.png" alt="" class="img-fluid">
+                <img src="CVD.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -269,9 +269,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://www.ramontenreiro.com/trabajos/cil.pdf">
+            <a href="cil.pdf">
               <div class="work-img">
-                <img src="https://www.ramontenreiro.com/trabajos/cil.png" alt="" class="img-fluid">
+                <img src="cil.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -288,9 +288,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://www.ramontenreiro.com/trabajos/aven.pdf">
+            <a href="aven.pdf">
               <div class="work-img">
-                <img src="https://www.ramontenreiro.com/trabajos/aven.png" alt="" class="img-fluid">
+                <img src="aven.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -307,9 +307,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://www.ramontenreiro.com/trabajos/tv.mp4">
+            <a href="tv.mp4">
               <div class="work-img">
-                <img src="https://www.ramontenreiro.com/trabajos/tv.png" alt="" class="img-fluid">
+                <img src="tv.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -326,9 +326,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://www.ramontenreiro.com/trabajos/Memo.pdf">
+            <a href="Memo.pdf">
               <div class="work-img">
-                <img src="https://www.ramontenreiro.com/trabajos/Memo.png" alt="" class="img-fluid">
+                <img src="Memo.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -345,9 +345,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://www.ramontenreiro.com/trabajos/EM98.pdf">
+            <a href="EM98.pdf">
               <div class="work-img">
-                <img src="https://www.ramontenreiro.com/trabajos/EM98.png" alt="" class="img-fluid">
+                <img src="EM98.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -390,7 +390,7 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="https://www.ramontenreiro.com/documents/certificados/Certificate Architecture.pdf"><img src="https://www.ramontenreiro.com/documents/certificados/TArq.jpg" alt="" class="img-fluid"></a>
+              <a href="Certificate Architecture.pdf"><img src="TArq.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -407,7 +407,7 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="https://www.ramontenreiro.com/documents/certificados/IE2.pdf"><img src="https://www.ramontenreiro.com/documents/certificados/TIE2.jpg" alt="" class="img-fluid"></a>
+              <a href="IE2.pdf"><img src="TIE2.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -424,7 +424,7 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="https://www.ramontenreiro.com/documents/certificados/UD.pdf"><img src="https://www.ramontenreiro.com/documents/certificados/TUD.jpg" alt="" class="img-fluid"></a>
+              <a href="UD.pdf"><img src="TUD.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -443,7 +443,7 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="https://www.ramontenreiro.com/documents/certificados/RiceCoursera.pdf"><img src="https://www.ramontenreiro.com/documents/certificados/TRice.jpg" alt="" class="img-fluid"></a>
+              <a href="RiceCoursera.pdf"><img src="TRice.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -460,7 +460,7 @@ GRADE: 95,5 % - Duration 9 weeks</p>
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="https://www.ramontenreiro.com/documents/certificados/Maryland_Coursera.pdf"><img src="https://www.ramontenreiro.com/documents/certificados/TMaryland.jpg" alt="" class="img-fluid"></a>
+              <a href="Maryland_Coursera.pdf"><img src="TMaryland.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -479,7 +479,7 @@ act on innovative business opportunities.</br>GRADE: 96,2%. Duration 6 weeks.</p
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="https://www.ramontenreiro.com/documents/certificados/Wharton.pdf"><img src="https://www.ramontenreiro.com/documents/certificados/TWharton.jpg" alt="" class="img-fluid"></a>
+              <a href="Wharton.pdf"><img src="TWharton.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
              <div class="card-category-box">
@@ -500,7 +500,7 @@ which is consistently ranked as the #1 marketing department in the world. Profes
   <!--/ FINAL FORMACION /-->
 
   <!--/ CONTACTO /-->
-  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(https://www.ramontenreiro.com/img/alcalde.jpg)">
+  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(alcalde.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -517,7 +517,7 @@ which is consistently ranked as the #1 marketing department in the world. Profes
                   <div class="row">
                    <div class="col-md-4">
                       <div class="card-img">
-                       <img src="https://www.ramontenreiro.com/gallery/address.jpg"/>
+                       <img src="address.jpg"/>
                           <div class="card-category-box">
                             <div class="card-category">
                                <h6 class="category">Ronda de Nelle 104 - 8º DR - A Coruña</h6>
@@ -528,20 +528,20 @@ which is consistently ranked as the #1 marketing department in the world. Profes
                    </div>
                    <div class="col-md-4">
                      <div class="card-img">
-                       <img src="https://www.ramontenreiro.com/gallery/phone.jpg"/>
+                       <img src="phone.jpg"/>
                         <div class="card-category-box">
                             <div class="card-category">
-                               <h6 class="category" align="center">671 617 644</h6>
+                               <h6 class="category" align="center">639 47 41 15</h6>
                              </div>
                           </div>
                       </div>
                    </div>
                    <div class="col-md-4">
                      <div class="card-img">
-                      <img src="https://www.ramontenreiro.com/gallery/email.jpg"/>
+                      <img src="email.jpg"/>
                        <div class="card-category-box">
                             <div class="card-category">
-                               <h6 class="category" align="center">ramon@tenreiros.com</h6>
+                               <h6 class="category" align="center">tenreiroramon@gmail.com</h6>
                             </div>
                           </div>
                       </div>
@@ -549,10 +549,6 @@ which is consistently ranked as the #1 marketing department in the world. Profes
                   </div>
                   </div>
                   <div class="socials">
-                    <ul>
-                      <li><a href="https://www.linkedin.com/in/rtenreiro/" style="color:#336666;padding:2px 0px"><img height="32" src="https://www.ramontenreiro.com/gallery/in.jpg"></a></li>
-                      <li><a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;padding:2px 0px"><img height="32" src="https://www.ramontenreiro.com/gallery/facebook.jpg"></a></li>
-                    </ul>
                   </div>
                 </div>
               </div>
@@ -566,7 +562,7 @@ which is consistently ranked as the #1 marketing department in the world. Profes
         <div class="row">
           <div class="col-sm-12">
             <div class="copyright-box">
-              <p class="copyright">&copy; Copyright <strong>2023 Ramón Tenreiro</strong>. All Rights Reserved</p>
+              <p class="copyright">&copy; Copyright <strong>2024 Ramón Tenreiro</strong>. All Rights Reserved</p>
               <div class="credits">
                 <!--
                   All the links in the footer should remain intact
@@ -586,21 +582,21 @@ which is consistently ranked as the #1 marketing department in the world. Profes
   <div id="preloader"></div>
 
   <!-- JavaScript Libraries -->
-  <script src="https://www.ramontenreiro.com/p40/lib/jquery/jquery.min.js"></script>
-  <script src="https://www.ramontenreiro.com/p40/lib/jquery/jquery-migrate.min.js"></script>
-  <script src="https://www.ramontenreiro.com/p40/lib/popper/popper.min.js"></script>
-  <script src="https://www.ramontenreiro.com/p40/lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="https://www.ramontenreiro.com/p40/lib/easing/easing.min.js"></script>
-  <script src="https://www.ramontenreiro.com/p40/lib/counterup/jquery.waypoints.min.js"></script>
-  <script src="https://www.ramontenreiro.com/p40/lib/counterup/jquery.counterup.js"></script>
-  <script src="https://www.ramontenreiro.com/p40/lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="https://www.ramontenreiro.com/p40/lib/lightbox/js/lightbox.min.js"></script>
-  <script src="https://www.ramontenreiro.com/p40/lib/typed/typed.min.js"></script>
+  <script src="jquery.min.js"></script>
+  <script src="jquery-migrate.min.js"></script>
+  <script src="popper.min.js"></script>
+  <script src="bootstrap.min.js"></script>
+  <script src="easing.min.js"></script>
+  <script src="waypoints.min.js"></script>
+  <script src="jquery.counterup.js"></script>
+  <script src="owl.carousel.min.js"></script>
+  <script src="lightbox.min.js"></script>
+  <script src="typed.min.js"></script>
   <!-- Contact Form JavaScript File -->
-  <script src="https://www.ramontenreiro.com/p40/contactform/contactform.js"></script>
+  <script src="contactform.js"></script>
 
   <!-- Template Main Javascript File -->
-  <script src="https://www.ramontenreiro.com/p40/js/main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 </html>
