--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/> 
   
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="slippry.css"/>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="cssslippry.css"/>
 
-  <link rel="shortcut icon" href="images/favicon32.png">
+  <link rel="shortcut icon" href="favicon32.png">
   
-  <script src="jquery.min.js"></script>
-  <script src="bootstrap.min.js"></script>
-  <script src="preloader.min.js"></script>
-  <script src="modernizr.js"></script> <!-- Modernizr -->
-  <script src="slippry.js"></script> <!-- slideshow -->
-  <script src="typed.js"></script> <!-- type ani -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/preloader.min.js"></script>
+  <script src="js/modernizr.js"></script> <!-- Modernizr -->
+  <script src="js/slippry.js"></script> <!-- slideshow -->
+  <script src="js/typed.js"></script> <!-- type ani -->
   <script src="index.php"></script> <!-- control -->
   <script>
   $(function(){
@@ -112,14 +112,11 @@
 			<div class="cd-half-block" style="background-color:#606">
                 <h1 style="color:#FFF"><img src="sep.gif" alt="separator"><br/>Things to do:</h1><nav>
 					<ul class="cd-primary-nav" style="font-size:18px;" >
-						<li><a style="font-size:24px; padding-left:90px;" href="2022RT.html">About me</a><span>
-                        <li><a style="font-size:24px; padding-left:90px;" href="contact.html">Stay in touch</a></li>
-                        <li><a style="font-size:24px; padding-left:90px;" href="dash.html">My creations, or just gaming:</a>
+						<li><a style="font-size:18px; padding-left:60px;" href="2022RT.html">About me</a><span>
+                        <li><a style="font-size:18px; padding-left:60px;" href="contact.html">Stay in touch</a></li>
+                        <li><a style="font-size:18px; padding-left:60px;" href="dash.html">My creations, or just gaming:</a>
                        <span>
-                        <a style="font-size:18px; padding-left:90px;" href="#">Real Estate</a> &nbsp;/&nbsp; 
-                        <a style="font-size:18px;" href="#">Painting</a> &nbsp;/&nbsp; 
-                        <a style="font-size:18px;" href="#">Internet</a></span></li>
-					</ul>
+                        	</ul>
 				</nav>
 			</div><!-- .cd-half-block -->
 			<div class="cd-half-block" >
@@ -273,21 +270,16 @@
 
 <div class="container-fluid zp">
 <div class="row zp" id="footer">
-<div class="col-md-4 pad"><p style="font-size:12px">© 2018-2023 Ramón Tenreiro - All rights reserved</p></div>
+<div class="col-md-4 pad"><p style="font-size:12px">© 2018-2024 Ramón Tenreiro - All rights reserved</p></div>
 <div class="col-md-4 pad socialbot">
-				<ul>
-                	<li><a href="https://www.linkedin.com/in/rtenreiro/" style="color:#336666;text-decoration:none;padding:2px 0px"></a></li>
-				    <li><a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;text-decoration:none;padding:2px 0px"></a></li>
-                </ul>
-
-</div>
+				</div>
 </div>
 <p id="back-top"><a href="#top"><span></span></a></p>
 
 <!-- Resource jQuery -->
-<script src="main.js"></script>
-<script src="scrollReveal.min.js?ver=2.1.0"></script>
-<script src="parallax.js" defer></script>
+<script src="js/main.js"></script>
+<script src="js/scrollReveal.min.js?ver=2.1.0"></script>
+<script src="js/parallax.js" defer></script>
 
 <script type="text/javascript">
       (function($) {
