--- a/2022RT.html
+++ b/2022RT.html
@@ -11,20 +11,20 @@
   <link href="favicon32.png" rel="icon">
 
   <!-- Bootstrap CSS File -->
-  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   
   <script src="cv.php"></script> <!-- control de entradas -->
 
 
   <!-- Libraries CSS Files -->
-  <link href="font-awesome.min.css" rel="stylesheet">
-  <link href="animate.min.css" rel="stylesheet">
-  <link href="ionicons.min.css" rel="stylesheet">
-  <link href="owl.carousel.min.css" rel="stylesheet">
-  <link href="lightbox.min.css" rel="stylesheet">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="css/animate.min.css" rel="stylesheet">
+  <link href="css/ionicons.min.css" rel="stylesheet">
+  <link href="css/owl.carousel.min.css" rel="stylesheet">
+  <link href="css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
   <!-- =======================================================
     Theme Name: DevFolio
@@ -582,21 +582,21 @@ which is consistently ranked as the #1 marketing department in the world. Profes
   <div id="preloader"></div>
 
   <!-- JavaScript Libraries -->
-  <script src="jquery.min.js"></script>
-  <script src="jquery-migrate.min.js"></script>
-  <script src="popper.min.js"></script>
-  <script src="bootstrap.min.js"></script>
-  <script src="easing.min.js"></script>
-  <script src="waypoints.min.js"></script>
-  <script src="jquery.counterup.js"></script>
-  <script src="owl.carousel.min.js"></script>
-  <script src="lightbox.min.js"></script>
-  <script src="typed.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery-migrate.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/easing.min.js"></script>
+  <script src="js/waypoints.min.js"></script>
+  <script src="js/jquery.counterup.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/lightbox.min.js"></script>
+  <script src="js/typed.min.js"></script>
   <!-- Contact Form JavaScript File -->
-  <script src="contactform.js"></script>
+  <script src="js/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
