--- a/aboutme.html
+++ b/aboutme.html
@@ -8,18 +8,18 @@
     <meta name="author" content="Ramon Tenreiro">
     <meta property='og:title' content='Ramon Tenreiro | Resume.'/>
     <meta property='og:description' content='Architecture, MBA, Resume, Tenreiro, Ramon Tenreiro'/>
-    <meta property='og:url' content='https://www.tenreiros.com'/>
+    <meta property='og:url' content='https://rtenreiro/github.io'/>
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/>
 
     <!-- Le styles -->
-    <link rel="nofollow" href="assets/css/bootstrap.css" rel="stylesheet">
-    <link rel="nofollow" href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="nofollow" href="assets/css/docs.css" rel="stylesheet">
-    <link rel="nofollow" href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link rel="nofollow" href="css/bootstrap.css" rel="stylesheet">
+    <link rel="nofollow" href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="nofollow" href="css/docs.css" rel="stylesheet">
+    <link rel="nofollow" href="js/google-code-prettify/prettify.css" rel="stylesheet">
 
     <script src="https://apis.google.com/js/platform.js"></script>
-      <link rel="shortcut icon" href="images/favicon32.png">
+      <link rel="shortcut icon" href="favicon32.png">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123276280-1"></script>
 <script>
@@ -48,10 +48,10 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="">
-                <a href="https://www.tenreiros.com/dash/dash.html">Newsletter</a>
+                <a href="dash.html">Newsletter</a>
               </li>
 			  <li class="">
-                <a href="https://www.tenreiros.com/dash/dashs.html">Things I made</a>
+                <a href="dashs.html">Things I made</a>
               </li>
               <li class="">
                 <a href="contact.html">Stay in Touch</a>
@@ -86,7 +86,7 @@
   <div class="col-md-9 offset-md-3"> 
         <!-- Global settings
         ================================================== -->
-        <img src="Imagenes/painting/600PSalon.png" alt="Family" width="600" class="img-polaroid">
+        <img src="600PSalon.png" alt="Family" width="600" class="img-polaroid">
           <p>Family Self-portrait - Oleo by Ramon Tenreiro</p> 
 </td>
 </tr>
