--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="cssslippry.css"/>
+  <link rel="stylesheet" href="css/slippry.css"/>
 
   <link rel="shortcut icon" href="favicon32.png">
   
