--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
 
 <!-- Resource jQuery -->
 <script src="js/main.js"></script>
-<script src="js/scrollReveal.min.js?ver=2.1.0"></script>
-<script src="js/parallax.js" defer></script>
+<script src="js/scrollReveal.min.js"></script>
+<script src="js/parallax.js"></script>
 
 <script type="text/javascript">
       (function($) {
