--- a/2022RT.html
+++ b/2022RT.html
@@ -8,7 +8,7 @@
   <meta content="" name="Curriculo de Ramón Tenreiro">
 
   <!-- Favicons -->
-  <link href="favicon32.png" rel="icon">
+  <link href="img/favicon32.png" rel="icon">
 
   <!-- Bootstrap CSS File -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
