--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 <div class="col-md-4 pad socialbot">
 				<ul>
                 	<li><a href="https://www.linkedin.com/in/rtenreiro/" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="img/link.fw.png" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a></li>
-				    <li><a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="Face.fw.png" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a></li>
+				    <li><a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="img/Face.fw.png" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a></li>
                 </ul>
 
 </div>
