--- a/DASH/CowGame.html
+++ b/DASH/CowGame.html
@@ -8,21 +8,21 @@
     <meta name="author" content="Ramon Tenreiro">
     <meta property='og:title' content='Ramon Tenreiro | Sharing creations with you .'/>
     <meta property='og:description' content='Architecture. Painting. Games'/>
-    <meta property='og:url' content='https://www.tenreiros.com'/>
+    <meta property='og:url' content='https://rtenreiro.github.io'/>
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/>
 
     <!-- Le styles -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="assets/css/docs.css" rel="stylesheet">
-    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
-<script src="libs/easeljs-0.6.0.min.js"></script>
-<script src="libs/tweenjs-0.4.0.min.js"></script>
-<script src="libs/movieclip-0.6.0.min.js"></script>
-<script src="libs/preloadjs-0.3.0.min.js"></script>
-<script src="libs/soundjs-0.4.0.min.js"></script>
-<script src="PlatypusGame.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
+    <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
+<script src="js/easeljs-0.6.0.min.js"></script>
+<script src="js/tweenjs-0.4.0.min.js"></script>
+<script src="js/movieclip-0.6.0.min.js"></script>
+<script src="js/preloadjs-0.3.0.min.js"></script>
+<script src="js/soundjs-0.4.0.min.js"></script>
+<script src="js/PlatypusGame.js"></script>
 <script>
 var canvas, stage, exportRoot, images;
 var platypii = [];
@@ -33,22 +33,22 @@ function init() {
     // resize the canvas to fill browser window dynamically
 	images = images;
 	var manifest = [
-		{src:"images/cliff.png", id:"cliff"},
-		{src:"images/co.png", id:"co"},
-		{src:"images/cow.png", id:"cow"},
-		{src:"images/cow2.png", id:"cow2"},
-		{src:"images/cowhead.png", id:"cowhead"},
-		{src:"images/cowhead2.png", id:"cowhead2"},
-		{src:"images/cowl1.png", id:"cowl1"},
-		{src:"images/cowl2.png", id:"cowl2"},
-		{src:"images/cowl3.png", id:"cowl3"},
-		{src:"images/cowl4.png", id:"cowl4"},
-		{src:"images/cowmouth.png", id:"cowmouth"},
-		{src:"images/cowmouthgifcopia.png", id:"cowmouthgifcopia"},
-		{src:"images/cowtail.png", id:"cowtail"},
-		{src:"images/pine.png" , id:"pine"},
-		{src:"images/pines.png", id:"pines"},
-		{src:"sounds/pop.mp3", id:"pop"}
+		{src:"img/cliff.png", id:"cliff"},
+		{src:"img/co.png", id:"co"},
+		{src:"img/cow.png", id:"cow"},
+		{src:"img/cow2.png", id:"cow2"},
+		{src:"img/cowhead.png", id:"cowhead"},
+		{src:"img/cowhead2.png", id:"cowhead2"},
+		{src:"img/cowl1.png", id:"cowl1"},
+		{src:"img/cowl2.png", id:"cowl2"},
+		{src:"img/cowl3.png", id:"cowl3"},
+		{src:"img/cowl4.png", id:"cowl4"},
+		{src:"img/cowmouth.png", id:"cowmouth"},
+		{src:"img/cowmouthgifcopia.png", id:"cowmouthgifcopia"},
+		{src:"img/cowtail.png", id:"cowtail"},
+		{src:"img/pine.png" , id:"pine"},
+		{src:"img/pines.png", id:"pines"},
+		{src:"img/pop.mp3", id:"pop"}
 	];
 
 	var loader = new createjs.LoadQueue(false);
@@ -194,7 +194,7 @@ function updateScore(delta) {
     ================================================== -->
     <footer class="footer">
       <div class="container">
-        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2014- 2019 </p>
+        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2014- 2024 </p>
       </div>
     </footer>
 
@@ -203,17 +203,17 @@ function updateScore(delta) {
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-scrollspy.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
-    <script src="assets/js/bootstrap-typeahead.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap-transition.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script src="js/bootstrap-typeahead.js"></script>
    </body></html>
