--- a/DASH/NL1.html
+++ b/DASH/NL1.html
@@ -173,7 +173,7 @@
 		<!-- CONTENT start -->
 					<table cellpadding="0" cellspacing="0" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="290" valign="top" align="left" class="m-b" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;padding:0">
-							<img src="https://www.tenreiros.com/panel/gallery/ATB.gif" alt="ATB" width="200" height="252" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
+							<img src="img/ATB.gif" alt="ATB" width="200" height="252" border="0" style="max-width:100%;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:block">
 </td>
 					</tr></table>
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
@@ -208,8 +208,8 @@
 <table cellpadding="0" cellspacing="0" align="right" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;font-family:Helvetica,Arial,sans-serif;font-size:14px"><tr style="padding:0">
 <td width="187" class="small social" align="right" valign="top" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;color:#787878;line-height:15px;padding:0;font-size:10px;text-transform:uppercase;word-spacing:-1px;margin-bottom:4px;margin-top:6px">
 								<div>
-									<a href="https://www.linkedin.com/in/rtenreiro/" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="http://www.tenreiros.com/panel/gallery/in.jpg" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a>
-									<a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="http://www.tenreiros.com/panel/gallery/facebook.jpg" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a>
+									<a href="https://www.linkedin.com/in/rtenreiro/" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="img/in.jpg" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a>
+									<a href="https://www.facebook.com/RAMONTENREIRO" style="color:#336666;text-decoration:none;padding:2px 0px"><img src="img/facebook.jpg" alt="" width="32" height="32" border="0" style="max-width:100%;max-height:32px;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;image-rendering:optimizeQuality;display:inline;border:none;margin:0"></a>
 								</div>
 							</td>
 						</tr></table>
