--- a/DASH/architecture.html
+++ b/DASH/architecture.html
@@ -8,18 +8,18 @@
     <meta name="author" content="Ramon Tenreiro">
     <meta property='og:title' content='Ramon Tenreiro | Resume.'/>
     <meta property='og:description' content='Architecture, MBA, Resume, Ramon Tenreiro'/>
-    <meta property='og:url' content='https://www.tenreiros.com'/>
+    <meta property='og:url' content='https://rtenreiro.github.io'/>
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/>
 
     <!-- Le styles -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="assets/css/docs.css" rel="stylesheet">
-    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
+    <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
 
     <script src="https://apis.google.com/js/platform.js"></script>
-     <link rel="shortcut icon" href="images/favicon32.png">
+     <link rel="shortcut icon" href="img/favicon32.png">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123276280-1"></script>
 <script>
@@ -44,13 +44,13 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="">
-                <a href="htttps://wwww.tenreiros.com/aboutme.html">About me</a>
+                <a href="https://rtenreiro.github.io/CV/2022.html">About me</a>
               </li>
 			  <li class="">
-                <a href="https://www.tenreiros.com/dash/dash.html">Things I made</a>
+                <a href="https://rtenreiro.github.io/DASH/dash.html">Things I made</a>
               </li>
               <li class="">
-                <a href="htttps://wwww.tenreiros.com/contact.html">Stay in Touch</a>
+                <a href="https://rtenreiro.github.io//contact.html">Stay in Touch</a>
               </li>
             </ul>
           </div> 
@@ -69,7 +69,7 @@
         <section id="global">
           <p>I grew up in architecture, my grandfather and my father are architects too. Since I can remember, I have always looked at the buildings, gardens, cities. Although I like the modern architecture, I love the timeless architecture. Looking deep in myself, I'm loving the true beauty that time doesn't wither. This gif shows you some of the spaces that I have created  afther that I have fed it with my heart.</p>
 <div class="container" align="center">
-          <img src= "Imagenes/ARCHITECTURE/architectureGIFANIMADO.gif" alt= "architecture" width= "600" height= "450" class= "aligncenter" class= "img-polaroid"/>
+          <img src= "img/architectureGIFANIMADO.gif" alt= "architecture" width= "600" height= "450" class= "aligncenter" class= "img-polaroid"/>
           <p>Principal duplex -  Plaza Isaac Diaz Pardo 2 - Ferrol </p> 
         </section>
       </div>
@@ -79,7 +79,7 @@
     ================================================== -->
     <footer class="footer">
       <div class="container">
-        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2014-2019 </p>
+        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2014-2024 </p>
       </div>
     </footer>
 
@@ -88,17 +88,17 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-scrollspy.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
-    <script src="assets/js/bootstrap-typeahead.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap-transition.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script src="js/bootstrap-typeahead.js"></script>
   </body></html>
