--- a/DASH/building.html
+++ b/DASH/building.html
@@ -8,15 +8,15 @@
     <meta name="author" content="Ramon Tenreiro">
     <meta property='og:title' content='Ramon Tenreiro | Sharing creations with you .'/>
     <meta property='og:description' content='Architecture. Painting. Games'/>
-    <meta property='og:url' content='https://www.tenreiros.com'/>
+    <meta property='og:url' content='https://rtenreiro.github.io/'/>
     <meta property='og:site_name' content='Ramon Tenreiro'/>
     <meta property='og:type' content='website'/>
 
     <!-- Le styles -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="assets/css/docs.css" rel="stylesheet">
-    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
+    <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.js"></script>
@@ -26,8 +26,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">-->
-    <link rel="apple-touch-icon-precomposed" href="images/favicon32.png">
-    <link rel="shortcut icon" href="images/favicon32.png">
+    <link rel="apple-touch-icon-precomposed" href="img/favicon32.png">
+    <link rel="shortcut icon" href="img/favicon32.png">
   </head>
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
 <header class="jumbotron subhead" id="overview">
@@ -43,7 +43,7 @@
         <section id="global">
           <p>For the past 12 years, I have been building a full range of residential homes and communities. This is an example of construction of 22 apartments in Ferrol to develop an urban project called "AEI-V". The AEI-V a public square, 4 streets, 4 blocks of apartments and all of necesary facilities. This is the fourth block and it was built between March 2007 and September 2008 and it required an investment of 2,8 million euros.I assumed full responsabilities; buying land, negotiating with banks, hiring, controlling, managing, marketing and sales.</p>
         <div class="container" align="center">
-          <img src="Imagenes/Building/BUILDING.gif" alt="Building" width="600" height="450" class="aligncenter"  class="img-polaroid">
+          <img src="img/BUILDING.gif" alt="Building" width="600" height="450" class="aligncenter"  class="img-polaroid">
           <p>Building 4th Block - Ferrol between March 2007 and September 2008</p> 
         
       </div></section></div>
@@ -53,7 +53,7 @@
     ================================================== -->
     <footer class="footer">
       <div class="container">
-        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2013-2019 </p>
+        <p>Designed and built by Ramon Tenreiro. <p>&copy; 2013-2024 </p>
       </div>
     </footer>
 
@@ -62,18 +62,18 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-scrollspy.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
-    <script src="assets/js/bootstrap-typeahead.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap-transition.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script src="js/bootstrap-typeahead.js"></script>
    </body>
 </html>
